Minor alignment css fix

--- a/css/stripe.css
+++ b/css/stripe.css
@@ -34,7 +34,7 @@ form {
 }
 
 #div-payment {
-  transform: translateY(-40%);
+  transform: translateY(-50%);
   text-align: center;
 }
 
